syntax = "proto3";
package fx.dex;

import "gogoproto/gogo.proto";

option go_package = "git.wokoworks.com/blockchain/fx-chain/x/dex/types";

message TotalPositionSize {
  string size = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}

message PositionID {
  string id = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint",
    (gogoproto.nullable) = false
  ];
}

message PositionIDs {
  repeated PositionID position_ids = 1 [(gogoproto.nullable) = false];
}

//BOTH字段仅供查询使用，开仓只能选择BID或ASK
enum PosDirection {
  option (gogoproto.goproto_enum_stringer) = true;
  option (gogoproto.goproto_enum_prefix)   = false;

  LONG = 0 [(gogoproto.enumvalue_customname) = "LONG"];
  SHORT  = 1 [(gogoproto.enumvalue_customname) = "SHORT"];
  ALL  = 2 [(gogoproto.enumvalue_customname) = "ALL"];
}

//持仓凭证信息
// fundingfee (正+: trader paid, 负-: trader received)
// lastUpdateCumuFundingRate： calculating funding payment, record when trader open/reduce/close position
message Position {
  string id = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint",
    (gogoproto.nullable) = false
  ];
  bytes owner = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string pair_id = 3;
  PosDirection direction = 4;
  string entry_price = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string mark_price = 6 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string liquidation_price = 7 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string base_quantity = 8 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string margin = 9 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  int64 leverage = 10;
  string unrealized_pnl = 11 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string margin_rate = 12 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string initial_margin = 13 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string pending_order_quantity = 14 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}

message Positions {
  repeated Position positions = 1 [(gogoproto.nullable) = false];
}

